# RAG-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/issues/: 001-pdf-loader.md  002-docx-loader.md  003-recursive-chunker.md  004-faiss-retriever.md  005-chromadb-retriever.md  006-openai-embedder.md  007-huggingface-embedder.md  008-llm-generator.md  009-async-pipeline.md  010-jupyter-notebook.md
.github/workflows/: ci.yml  create-issues.yml
examples/: README.md  basic_rag.py
ragframework/: __init__.py  base.py  config.py  exceptions.py
ragframework/document/: __init__.py  chunkers.py  loaders.py
ragframework/embeddings/: __init__.py  random_embedder.py
ragframework/generator/: __init__.py  echo_generator.py
ragframework/pipeline/: __init__.py  rag.py
ragframework/retriever/: __init__.py  in_memory.py
ragframework/utils/: __init__.py  text.py
tests/: conftest.py  test_config.py
tests/test_document/: test_chunkers.py  test_loaders.py
tests/test_pipeline/: test_rag.py
tests/test_retriever/: test_in_memory.py
