[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragframework"
version = "0.1.0"
description = "A modular, extensible Python framework for building Retrieval-Augmented Generation (RAG) pipelines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Adam Silva", email = "adaumsilva@gmail.com" }]
keywords = ["rag", "retrieval-augmented-generation", "llm", "nlp", "embeddings", "vector-store"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
docx = ["python-docx>=1.1"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
huggingface = ["sentence-transformers>=2.7"]
chromadb = ["chromadb>=0.5"]
faiss = ["faiss-cpu>=1.8"]
all = [
    "ragframework[pdf]",
    "ragframework[docx]",
    "ragframework[openai]",
    "ragframework[anthropic]",
    "ragframework[huggingface]",
    "ragframework[chromadb]",
    "ragframework[faiss]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/adaumsilva/RAG-framework"
Repository = "https://github.com/adaumsilva/RAG-framework"
Issues = "https://github.com/adaumsilva/RAG-framework/issues"
Changelog = "https://github.com/adaumsilva/RAG-framework/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["ragframework*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ragframework"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
